extended/advanced/challenges/troubleshooting-master/broken-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: super-app-frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: super-app-backend
