extended/advanced/challenges/troubleshooting-master/broken-app/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-deny-egress
  namespace: super-app-backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress: [] # Blocks all egress traffic
